src/App.css
/* General App styles */
.App {
  text-align: center;
}

/* Body styles (general) */
body {
  transition: background-color 0.4s ease, color 0.4s ease;
}

/* Light Mode (default) */
body {
  @apply bg-white text-gray-800;
  font-family: "Montserrat", sans-serif;
}

/* Background dots pattern for light mode */
.bg-dots-pattern {
  background-image: radial-gradient(
      circle at 10% 20%,
      rgba(0, 0, 0, 0.2) 1px,
      transparent 1px
    ),
    radial-gradient(circle at 40% 60%, rgba(0, 0, 0, 0.2) 1px, transparent 1px);
  background-size: 30px 30px;
  background-repeat: repeat;
}

/* Dark Mode */
body.dark {
  background-color: #111;
  @apply text-white;
  font-family: "Montserrat", sans-serif;
}

/* Background dots pattern for dark mode */
.dark .bg-dots-pattern {
  background-image: radial-gradient(
      circle at 10% 20%,
      rgba(255, 255, 255, 0.2) 1px,
      transparent 1px
    ),
    radial-gradient(
      circle at 40% 60%,
      rgba(255, 255, 255, 0.2) 1px,
      transparent 1px
    );
  background-size: 30px 30px;
  background-repeat: repeat;
}

/* Unstyled list item styles */
.unstyled li a.active {
  font-weight: bold;
  color: rgb(59, 130, 246);
}

/* Number styling within unstyled list items */
.unstyled li a span.num {
  background-color: #e2e8f0;
  color: #4a5568;
  border-radius: 9999px;
  font-size: 0.75rem;
  padding: 0.25rem 0.5rem;
}

/* Hover effect for links in unstyled lists */
.unstyled li a:hover {
  transition: color 0.3s ease;
  color: rgb(59, 130, 246);
}

/* Skill item layout */
.skill-item {
  margin: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* Skills cloud layout */
.skills-cloud {
  gap: 2rem;
}

/* Unstyled list layout */
.unstyled {
  display: flex;
  flex-wrap: wrap;
}

/* Dark mode switch thumb styles */
.dark-mode-switch-thumb {
  display: flex;
  align-items: center;
  justify-content: center;
}

.dark-mode-switch-thumb svg {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

/* Media query for smaller screens */
@media (max-width: 768px) {
  .unstyled {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
}

@media (max-width: 768px) {
  .unstyled li {
    margin-bottom: 0.5rem;
  }
}

@media (max-width: 768px) {
  .flex.items-center {
    justify-content: flex-end;
  }
}

